--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@
 logging.file.path=/var/tmp/mylog.log
 
 # 5 * 60 * 60 * 1000 = 5 hours
-jwt.token.validity=18000000
+jwt.token.validity=600000
 jwt.token.secret=FdseFdse2020
