--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,19 @@
 #logging.level.root = DEBUG;
 logging.file.path=/var/tmp/mylog.log
 
-# 5 * 60 * 60 * 1000 = 5 hours
-jwt.token.validity=600000
-<<<<<<< HEAD
-jwt.token.secret=FdseFdse2020
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#serverport
+server.port=8080
 
 #URL of the front end
 frontend.url=http://localhost:80 
-=======
+
+# expired time: 5 * 60 * 60 * 1000 = 5 hours
+jwt.token.validity=600000
+
+#<<<<<<< HEAD
 jwt.token.secret=FdseFdse2020
->>>>>>> c9880a3da86bc0fe0f3c11e8f18a42598d17fe7b
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+#=======
+#jwt.token.secret=FdseFdse2020
+#>>>>>>> c9880a3da86bc0fe0f3c11e8f18a42598d17fe7b
