--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 #logging.level.root = DEBUG;
+#日志的位子
 logging.file.path=/var/tmp/mylog.log
 
 #serverport
 server.port=8080
 
 #URL of the front end
-frontend.url=http://localhost:80 
+frontend.url=http://localhost:80
 
 # expired time: 5 * 60 * 60 * 1000 = 5 hours
 jwt.token.validity=600000
