--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #logging.level.root = DEBUG;
-#日志的位子
+#日志的文件路径
 logging.file.path=/var/tmp/mylog.log
 
 #serverport
@@ -11,10 +11,6 @@ frontend.url=http://localhost:80
 # expired time: 5 * 60 * 60 * 1000 = 5 hours
 jwt.token.validity=600000
 
-#<<<<<<< HEAD
+#token secret
 jwt.token.secret=FdseFdse2020
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-#=======
-#jwt.token.secret=FdseFdse2020
-#>>>>>>> c9880a3da86bc0fe0f3c11e8f18a42598d17fe7b
