--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #logging.level.root = DEBUG;
 #日志的文件路径
-logging.file.path=/var/tmp/mylog.log
+logging.file.path=/var/tmp/UniConference/BackendLog
 
 #serverport
 server.port=8080
