--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,11 @@ logging.file.path=/var/tmp/UniConference/BackendLog
 #serverport
 server.port=8080
 
+#设置单个文件大小
+spring.servlet.multipart.max-file-size= 100MB
+#设置单次请求文件的总大小
+spring.servlet.multipart.max-request-size= 120MB
+
 #URL of the front end
 frontend.url=http://localhost:80
 
