change token validate tiome

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,8 @@ spring.servlet.multipart.max-request-size= 120MB
 frontend.url=http://localhost:80
 
 # expired time: 5 * 60 * 60 * 1000 = 5 hours
-jwt.token.validity=600000
+# 100 mins
+jwt.token.validity=6000000
 
 #token secret
 jwt.token.secret=FdseFdse2020
